# VAK-AI-Text-Adventure

./: .gitignore  MONOLITH-SPECS.md  PROGRESS.md  README.md  VAK-NODE-7 Landing Page.md  WALK-THROUGH.md  __init__.py  cli.py  filesystem.py  functional_test.py  game.py  index.html  info.txt  intro.txt  llm.py  pyproject.toml  run.sh  story.py
1/: Haunted_OS.md  Lost_Lab_Last_Library.md  PROGRESS.md  WALK-THROUGH.md  ghost  user-custom-portal.txt
data/: history
vak/: commands.py  game.py  state.py  story.py
