[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vak"
version = "1.0.0"
description = "VAK-NODE-7 — a terminal-based interactive fiction / CTF game"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0",
]

[tool.setuptools.packages.find]
include = ["vak*"]
